objects/Lead_status_change_Americas__c.object
<CustomObject>
    <description>lead status change from last week to this week by lead age for Americas</description>
    <label>Lead status change America</label>
    <nameField>
        <label>Lead status</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead status change Americas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <label>Lead Age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <label>Lead Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>